style.css
.sitename {
    color: rgba(116, 110, 101, 0.829);
    font-family: monospace;
    font-size: 150px;
    text-align: center;
    opacity: .8;
}

.top {
    display: inline;
    background-color: rgba(99, 94, 87, 0.733);
    opacity: .7;
    padding: 25px;
    padding-inline: 10%;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    font-size: large;

}

.topbar {
    position: relative;
    margin: 30px;
}

h1,
h2,
p {
    text-align: center;
    color: rgb(230, 218, 199);
    padding: auto;
}

body {
    background-image: url(https://images.pexels.com/photos/1287075/pexels-photo-1287075.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
    margin: 0 auto;
}

.contain {
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 10%;
}

.advert {
    float: right;
    padding: 5px;
    position: relative;
    right: 90px;
    bottom: 530px;   
}


.sidebar {
    background-color: rgb(25, 66, 96);
    float: right;
    position: relative;
    right: 110px;
    bottom: 1720px;
    padding: 5%;
    padding-bottom: 2%;
    margin-right: 3px;
    border-radius: 100px;
    opacity: .6;
}

.sidebox {
    background-color: rgb(230, 218, 199);
    display: block;
    padding: 20%;
    width: 100px;
    text-align: center;
    border-radius: 20px;
    position: relative;
    right: 60%;

}

.featpost {
    float: left;
    position: relative;
    margin-right: 30%;
    margin-top: 1%;
    margin-bottom: 1%;
    background-color: rgb(100, 73, 61);
    padding: 20px;
    border-radius: 100px;
    opacity: .7;
}

    .post {
        float: left;
        position: relative;
        bottom: 420px;
        background-color: rgb(100, 73, 61);
        padding: 20px;
        border-radius: 100px;
        margin: 1%;
        opacity: .8;
    }


html {
    font-size: 15px;
    font-family: "Open Sans", sans-serif;
}

